## CHANGELOG

- __2013/07/07__: 0.9.6 release.
    - Upgrade to mecab 0.996
    - Adding support for partial parsing mode (-p / --partial)
    - Adding support for marginal probability output mode (-m / --marginal)
    - Adding support for maximum grouping size for unknown words (-M / --max-grouping-size)
    - Outputting warning message for deprecation of :lattice_level option
    - Requiring ffi 1.9.0 or greater
    - Dropping support for Ruby 1.8.7
    - Migrating to minitest
    - Removing automatic library load for Cygwin platform (does not compile) 

- __2012/09/16__: 0.9.5 release.
    - Fixed [Issue 9: trimされていない文字列のparse](https://bitbucket.org/buruzaemon/natto/issue/9/trim-parse) 
    - Fixed [Issue 10: BUG Segmentation Fault](https://bitbucket.org/buruzaemon/natto/issue/10/bug-segmentation-fault) 
    - Adding parse_as_nodes to allow for method-chaining on list of parsed nodes
    - Adding parse_as_strings to allow for method-chaining on list of string output
    - Deprecating both readnodes and readlines (badly named methods, see parse_as_nodes and parse_as_strings, respectively)
    - Refactored the option parsing logic into Natto::OptionParse
    - Enhanced Natto::DictionaryInfo#type override for java or ruby < 1.9

- __2012/02/26__: 0.9.4 release.
    - Exposing the underlying FFI pointer as @tagger in Natto::MeCab
    - Exposing the underlying FFI pointer as @pointer in Natto::MeCabNode
    - Fixed node formatting behavior for both regular and N-Best node parsing
    - Adding is_nor?, is_unk?, is_bos?, is_eos?, is_eon? to Natto::MeCabNode 
    - Adding is_sysdic?, is_usrdic?, is_unkdic? to Natto::DictionaryInfo 
    - Adding readnodes to allow for method-chaining on list of parsed nodes
    - Adding readlines to allow for method-chaining on list of string output
    - Updating README to include description of DevKit install for RubyInstaller
    - Refactored the codebase, introducing more tests

- __2012/02/14__: 0.9.3 release.