@@ -44,9 +44,37 @@ module Natto
       host_os = RbConfig::CONFIG['host_os']
 
       if host_os =~ /mswin|mingw/i
-        raise LoadError, "Please set #{MECAB_PATH} to the full path to libmecab.dll"
+        require 'win32/registry'
+        begin
+          base = nil
+          Win32::Registry::HKEY_CURRENT_USER.open('Software\MeCab') do |r|
+            base = r['mecabrc'].split('etc').first
+          end
+          lib = File.join(base, 'bin/libmecab.dll')
+          File.realpath(lib)
+        rescue
+          raise LoadError, "Please set #{MECAB_PATH} to the full path to libmecab.dll"
+        end
       else
-        'mecab'
+        require 'open3'
+        if host_os =~ /darwin/i
+          ext = 'dylib'
+        else
+          ext = 'so'
+        end
+
+        begin
+          base, lib = nil, nil
+          cmd = 'mecab-config --libs'
+          Open3.popen3(cmd) do |stdin,stdout,stderr|
+            toks = stdout.read.split
+            base = toks.first[2..-1]
+            lib = toks.last[2..-1]
+          end
+          File.realpath(File.join(base, "#{lib}#{ext}"))
+        rescue
+          raise LoadError, "Please set #{MECAB_PATH} to the full path to libmecab.#{ext}"
+        end
       end
     end
 
@@ -156,3 +184,29 @@ module Natto
     end
   end
 end
+
+# Copyright (c) 2014, Brooke M. Fujita.
+# All rights reserved.
+# 
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+# 
+#  * Redistributions of source code must retain the above
+#    copyright notice, this list of conditions and the
+#    following disclaimer.
+# 
+#  * Redistributions in binary form must reproduce the above
+#    copyright notice, this list of conditions and the
+#    following disclaimer in the documentation and/or other
+#    materials provided with the distribution.
+# 
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
+# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+# ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
